--- a/src/main/java/edu/gatech/mulegame/gui/maingui.fxml
+++ b/src/main/java/edu/gatech/mulegame/gui/maingui.fxml
@@ -6,9 +6,9 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MainController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MainController">
    <children>
-      <GridPane fx:id="startPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1024.0" style="-fx-background-image: url('http://thedoteaters.com/tde/wp-content/uploads/2013/03/ea-MULE-1024x768.png');">
+      <GridPane fx:id="startPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1024.0" style="-fx-background-image: url('http://thedoteaters.com/tde/wp-content/uploads/2013/03/ea-MULE-1024x768.png');" visible="false">
          <children>
             <Button fx:id="startButton" mnemonicParsing="false" onAction="#openPane2" prefHeight="105.0" prefWidth="210.0" text="Start!" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
             <Slider fx:id="playerCount" blockIncrement="1.0" majorTickUnit="1.0" max="4.0" min="1.0" minHeight="-Infinity" minorTickCount="0" showTickLabels="true" showTickMarks="true" snapToTicks="true" GridPane.columnIndex="1" GridPane.rowIndex="2" GridPane.valignment="TOP" />
@@ -60,7 +60,7 @@
             <Button fx:id="flatlandButton" mnemonicParsing="false" onAction="#openPane4" prefHeight="269.0" prefWidth="205.0" text="Flatland" GridPane.columnIndex="2" GridPane.rowIndex="1" />
          </children>
       </GridPane>
-      <GridPane fx:id="playerConfig" prefHeight="768.0" prefWidth="1024.0" visible="false">
+      <GridPane fx:id="playerConfig" prefHeight="768.0" prefWidth="1024.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -89,6 +89,7 @@
                </font>
             </Label>
             <ColorPicker GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
+            <Label fx:id="dialog" alignment="CENTER" prefHeight="256.0" prefWidth="276.0" text="Player 1 is choosing" GridPane.columnIndex="1" GridPane.rowIndex="2" />
          </children>
       </GridPane>
    </children>
